Add categories CRUDs
